--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Formatters"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./out/extension.js",
   "contributes": {
