Cleaned up to make the extension 1.2.0 ready.
Read on the changes in this commit in the changelog.md under [1.2.0]

Signed-off-by: Doreen Chemweno <doreenjeptoo@gmail.com>

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
       {
         "command": "track-my-comments.trackComments",
         "title": "Track Comments"
+      },
+      {
+        "command": "track-my-comments.refreshComments",
+        "title": "Refresh Comments - Scans all files"
       }
     ]
   },
